[tool.poetry]
name = "project-widget"
version = "0.1.0"
description = ""
authors = ["rostislav <rostislavkenobi@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.0"
mypy = "^1.10.1"
black = "^24.4.2"
isort = "^5.13.2"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-lenth = 119
exclude = '.git'

[tool.isort]
line_lenth = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
